--- a/.gitmodules
+++ b/.gitmodules
@@ -37,6 +37,8 @@
 [submodule "bundle/xmledit"]
 	path = bundle/xmledit
 	url = https://github.com/sukima/xmledit.git
+    ignore = dirty
 [submodule "bundle/zencoding-vim"]
 	path = bundle/zencoding-vim
 	url = https://github.com/mattn/emmet-vim.git
+    ignore = dirty
