--- a/.gitmodules
+++ b/.gitmodules
@@ -42,3 +42,7 @@
 	path = bundle/zencoding-vim
 	url = https://github.com/mattn/emmet-vim.git
     ignore = dirty
+[submodule "bundle/powerline"]
+	path = bundle/powerline
+	url = https://github.com/Lokaltog/vim-powerline.git
+    ignore = dirty
