--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 	path = bundle/powerline
 	url = https://github.com/Lokaltog/vim-powerline.git
     ignore = dirty
+[submodule "bundle/vim-colors-solarized"]
+	path = bundle/vim-colors-solarized
+	url = https://github.com/altercation/vim-colors-solarized.git
